--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,16 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
-# Datasource
-spring.datasource.url=jdbc:h2:file:~/test;
+# DATASOURCE
+spring.datasource.url=jdbc:h2:file:~/hackatona;
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+
+#JPA
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
 
+#SERVER
 server.port=8081
