--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
 		</dependency>
 
 	</dependencies>
+	
+	<properties>
+	  <sonar.organization>alessandromedeiros</sonar.organization>
+	  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+	</properties>
 
 	<build>
 		<plugins>
